--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/github-dark.css">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
@@ -77,6 +82,9 @@
 
 <hr>
 
+</article>
+      </div>
+    </div>
     <footer>
       <div class="owner">
       <p><a href="https://github.com/ReidBix" class="avatar"><img src="https://avatars0.githubusercontent.com/u/7086521?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/ReidBix">ReidBix</a> maintains <a href="https://github.com/ReidBix/QuantumMenace">QuantumMenace</a></p>
